# broker-wizard

./: cspell.config.yaml  pyproject.toml  readme.md
examples/scenario1/: nodes.bat  pub1.py
examples/scenario1/config/: nodes.yaml
src/broker_wizard/: __init__.py  inst1.py  publisher.py  subscriber.py
src/broker_wizard/server/: broker.py
src/broker_wizard/tools/: logging.py
tests/mocks/: subscriber.py
