[project]
name = "broker-wizard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Panaintescu Adrian Valentin", email = "adrian.cert@gmail.com" }
]
dependencies = [
    "msgspec>=0.18.6",
    "websockets>=12.0",
]
readme = "readme.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
server = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
extend-select = ["C", "N", "SIM", "PTH", "I", "PL", "FURB"]
